Fix: corretta visualizzazione di "Modifica Richiesta" e "Mezzi in Servizio" quando i "Box di Riepilogo" non sono visibili

--- a/src/frontend/launcherComponent/src/app/features/home/richieste/modifica-richiesta/modifica-richiesta.component.scss
+++ b/src/frontend/launcherComponent/src/app/features/home/richieste/modifica-richiesta/modifica-richiesta.component.scss
@@ -1,3 +1,13 @@
+.m-h-750-modificarichiesta {
+  height: 750px;
+  max-height: 750px;
+}
+
+.m-h-850-modificarichiesta {
+  height: 850px;
+  max-height: 850px;
+}
+
 .dropdownTipologiaRichiedente {
   border-color: #007bff !important;
 }
